--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,10 @@ ul {
     padding: 0;
 }
 .conteiner {
-    margin-left: auto;
-    margin-right: auto;
-    width: 1200px;
+    margin: 0 auto;
+    max-width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 /* лого */
 .logo {
@@ -40,7 +41,13 @@ ul {
     color: var(--primiry-text-color);
 }
 /* навигация */
-.nav .link {
+.nav {
+    display: flex;
+}
+.nav-list {
+    display: flex;
+}
+.nav-list .link {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -48,14 +55,18 @@ ul {
     color: var(--primiry-text-color);
     text-decoration: none;
 }
-.nav .link:hover,
-.nav .link:focus {
+.nav-list .link:hover,
+.nav-list .link:focus {
     color: var(--accent-color);
 }
-.nav .current {
+.nav-list .current {
     color: var(--accent-color);
 }
 /* авторизация */
+.auth {
+    display: flex;
+    justify-content: end;
+}
 .auth .link {
     font-weight: 500;
     font-size: 14px;
