--- a/css/style.css
+++ b/css/style.css
@@ -326,7 +326,7 @@ ul {
 .border {
     padding-left: 24px;
     padding-bottom: 20px;
-    margin-top: 20px;
+    padding-top: 20px;
     text-align: left;
     border: 1px solid #EEEEEE;
     border-top: 1px solid var(--hero-color);
